<resources>

    <string name="facebook_app_id">1821544708134987</string>
    <string name="fb_login_protocol_scheme">fb1821544708134987</string>

    <string name="app_name">Lets Chat</string>
    <string name="app_name_signUp">Sign Up</string>
    <string name="app_name_Inbox">Inbox</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_signUp">Sign Up</string>

    <string name="signUp_firstName">First Name</string>
    <string name="signUp_lastName">Last Name</string>
    <string name="signUp_gender">Gender</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_cpassword">Confirm Password</string>
    <string name="signUp_btn">Sign Up</string>
    <string name="signUp_cancel">Cancel</string>

    <string name="toast_no_internet">No Internet Connection...</string>
    <string name="toast_empty_values">Email and Password fields cannot be empty</string>
    <string name="toast_signup_empty_values">User details cannot be empty</string>
    <string name="toast_loginFailed">Invalid Credentials</string>
    <string name="toast_signup_error">Unable to create user account</string>
    <string name="toast_signup_length_error">Password should have minimum of 6 characters</string>
    <string name="toast_signup_success">User has been created</string>
    <string name="toast_signup_passwords_does_not_match">Passwords does not match</string>
    <string name="toast_enter_message">Enter your message</string>

    <string name="chat_hint_message">Type message to send</string>

    <string name="chat_users_tab">Users</string>
    <string name="chat_inbox_tab">Inbox</string>
    <string name="chat_profile_tab">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_users">Users</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_edit_photo">Change Photo</string>
    <string name="profile_edit_Details">Edit</string>
    <string name="profile_save_Details">Save</string>

    <string name="profile_firstName">First Name</string>
    <string name="profile_lastName">Last Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_email">Email</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="no_inbox_messages">No messages in your Inbox</string>
    <string name="inbox_header">Hi there.......</string>

</resources>
