<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.navanee.letschat.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/emailField"
        android:layout_below="@+id/imageView2"
        android:hint="@string/login_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:password="true"
        android:hint="@string/login_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:text="@string/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/loginBtn"
        android:layout_marginTop="10dp"
        android:minWidth="38dip"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_below="@+id/signUpBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_below="@+id/google_sign_in_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/login_signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signUpBtn"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/loginBtn"
        android:layout_alignStart="@+id/loginBtn" />

    <ImageView
        app:srcCompat="@drawable/chatbig"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp" />

</RelativeLayout>
